# tree-rs

./: .editorconfig  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
.helix/: languages.toml
examples/: tree.rs
src/: error.rs  fs.rs  lib.rs
