[package]
name = "tree"
version = "0.1.0"
edition = "2021"
authors = ["Heath Stewart (https://github.com/heaths)"]
description = "Build trees from simple node providers, with optional terminal printing and color support."
repository = "https://github.com/heaths/tree-rs"
license = "MIT"
publish = false

[features]
default = ["fs"]
fs = []

[dependencies]
clap = { version = "4.5.16", features = ["cargo", "derive"] }
